--- a/myportfolio/portfolio.html
+++ b/myportfolio/portfolio.html
@@ -159,11 +159,11 @@
             <div class="link">
                 <img src="images/whiteGithubLogo.png" alt="Github logo" width="30px" height="20px" align="left" />
                 <p>
-                    <a href="https://github.com/Raheel-10k">Github</a>
+                    <a href="https://github.com/Raheel-10k" target="_page1">Github</a>
                 </p>
                 <img src="images/whitelinkedInLogo.png" alt="LinkedIn logo" width="20px" height="20px" align="left" />
                 <p>
-                    <a href="https://www.linkedin.com/in/raheel-kotwal-02b594291/">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/raheel-kotwal-02b594291/" target="_page2">LinkedIn</a>
                 </p>
             </div>
         </div>
