--- a/formcreation.html
+++ b/formcreation.html
@@ -10,7 +10,7 @@
                 <h1 id="title" class="text-center" style="color: beige">
                     <u>Survey Form</u>
                 </h1>
-                <p id="description" style="color: beige">Login Page</p>
+                <p id="description" style="color: beige"></p>
             </header>
             <form id="survey-form">
                 <div class="form-group">
@@ -74,7 +74,6 @@
                             value="definitely"
                             type="radio"
                             class="input-radio"
-                            checked
                         />
                         Definitely</label
                     >
@@ -84,6 +83,7 @@
                             value="maybe"
                             type="radio"
                             class="input-radio"
+                            checked
                         />
                         Maybe</label
                     >
