--- a/formcreation.html
+++ b/formcreation.html
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="form-group">
-                    <p>Would you recommend freeCodeCamp to a friend?</p>
+                    <p>Would you recommend ITM to a friend?</p>
                     <label>
                         <input
                             name="user-recommend"
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="form-group">
-                    <p>What is your favorite feature of freeCodeCamp?</p>
+                    <p>What is your favorite feature of ITM?</p>
                     <select
                         id="most-like"
                         name="mostLike"
@@ -119,7 +119,7 @@
 
                 <div class="form-group">
                     <p>
-                        What would you like to see improved?<span class="clue"
+                        What are your interests?<span class="clue"
                             >(Check all that apply)</span
                         >
                     </p>
@@ -232,6 +232,7 @@
                         class="input-textarea"
                         name="comment"
                         placeholder="Enter your comment here..."
+                        style="resize: none"
                     ></textarea>
                 </div>
 
