--- a/formcreation.html
+++ b/formcreation.html
@@ -237,12 +237,7 @@
                 </div>
 
                 <div class="form-group">
-                    <button
-                        type="submit"
-                        id="submit"
-                        class="submit-button"
-                        style="color: white"
-                    >
+                    <button type="submit" id="submit" class="submit-button">
                         Submit
                     </button>
                 </div>
