--- a/creatingStripedTableUsingBootstrap.html
+++ b/creatingStripedTableUsingBootstrap.html
@@ -2,13 +2,10 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        />
+        <link rel="stylesheet" href="css/bootstrap.min.css" />
     </head>
     <body>
-        <table class="table">
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th>Header 1</th>
@@ -60,6 +57,6 @@
             </tbody>
         </table>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="/Users/raheel/Desktop/sem2/HTML/bootstrap-5.3.2-dist/js"></script>
     </body>
 </html>
