renamed function from validateForm() to validateEmail()
As of now we are only dealing with email validation; But will be again renamed to validateForm() when we have a proper form validator code

--- a/basicUsernameAndPasswordForm.html
+++ b/basicUsernameAndPasswordForm.html
@@ -60,7 +60,7 @@
     </head>
     <body>
         <h2 style="color: #f0f0f0">Login Form</h2>
-        <form id="registrationForm" onsubmit="return validateForm()">
+        <form id="registrationForm" onsubmit="return validateEmail()">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required />
 
@@ -75,7 +75,7 @@
         </form>
 
         <script>
-            function validateForm() {
+            function validateEmail() {
                 // Simple email validation using regex
                 const emailInput = document.getElementById("email");
                 const emailError = document.getElementById("emailError");
