--- a/lab/imagesearchingWebpage.html
+++ b/lab/imagesearchingWebpage.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Img Search</title>
+        <title>Img Gallery</title>
         <style>
             body {
                 font-family: Arial, sans-serif;
@@ -41,7 +41,7 @@
         </style>
     </head>
     <body>
-        <h1>Img Search</h1>
+        <h1>Img Gallery</h1>
 
         <div>
             <input
