--- a/lab/imageAsbgimg.html
+++ b/lab/imageAsbgimg.html
@@ -6,12 +6,11 @@
     <title>Document</title>
     <style>
         body{
-            background-image: url('https://miro.medium.com/v2/resize:fit:1400/1*do0YAp2ICH2BVcJOPJNAhQ.png');
+            background-image: url('https://img.freepik.com/free-photo/silhouette-photography-trees-blue-sky-during-golden-hour_395237-143.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais');
         }
     </style>
 </head>
 <body>
-    
 </body>
     
 </body>
