--- a/myportfolio/portfolio.html
+++ b/myportfolio/portfolio.html
@@ -80,7 +80,7 @@
         </div>
     </section>
 
-    <h1>My Tounges</h1>
+    <h1>My Skills</h1>
     <section id="skills">
         <div class="container">
             <div class="image">
