js for hover and portfolio edited further

--- a/myportfolio/portfolio.html
+++ b/myportfolio/portfolio.html
@@ -16,7 +16,7 @@
     <nav>
         <ul>
             <div class="link">
-                <li><a href="#about">About Me</a></li>
+                <li><a href="#about-section">About Me</a></li>
             </div>
             <div class="link">
                 <li><a href="#projects">Projects</a></li>
@@ -51,8 +51,8 @@
         </div>
     </section>
 
-    <h1>About Me</h1>
-    <section id="about" style="display: flex; justify-content: space-between">
+    <h1 id="about-section">About Me</h1>
+    <section id="about" style="display: flex; justify-content: left">
         <div class="information">
             <div class="heading">
 
@@ -111,8 +111,8 @@
     <section id="projects">
         <!-- Showcase projects with brief descriptions -->
         <div class="project">
-            <h3>Project 1</h3>
-            <p>Description of Project 1</p>
+            <h3>Class Management System</h3>
+            <p>The code presents a modular student management system, encompassing features such as report generation, attendance calculation, and course handling. StudentManagement efficiently manages student data, while the LoginSystem facilitates user interaction. The Main Program integrates these components, and an alternative StudentManagement implementation demonstrates search, addition, and deletion. Overall, it provides a versatile platform for student-related functionalities.</p>
         </div>
         <div class="project">
             <h3>Project 2</h3>
@@ -168,6 +168,9 @@
             </div>
         </div>
     </footer>
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
