--- a/imageAndDescriptionUsingBoxModel.html
+++ b/imageAndDescriptionUsingBoxModel.html
@@ -42,6 +42,8 @@
             </div>
         </section>
 
+        <hr style="height: 0.5px; background: #fff" />
+
         <section class="section">
             <div class="content right">
                 <img
