--- a/texttransformation.html
+++ b/texttransformation.html
@@ -14,11 +14,15 @@
             .capitalize {
                 text-transform: capitalize;
             }
+            p {
+                text-transform: uppercase;
+            }
         </style>
     </head>
     <body>
         <p class="uppercase">SOme Random tag</p>
         <p class="lowercase">SOme Random tag</p>
         <p class="capitalize">SOme random tag Is used</p>
+        <p>Some <span class="capitalize">new hello world</span></p>
     </body>
 </html>
