--- a/letterSpacingInHTML.html
+++ b/letterSpacingInHTML.html
@@ -11,6 +11,6 @@
         </style>
     </head>
     <body>
-        <h1>This is the main cehcker</h1>
+        <h1>This is the main checker</h1>
     </body>
 </html>
