--- a/flexBoxUsage.html
+++ b/flexBoxUsage.html
@@ -13,5 +13,19 @@
             <div class="flex-item">Item 3</div>
             <div class="flex-item">Item 4</div>
         </div>
+
+        <div class="stretched-container">
+            <div class="flex">Item 1</div>
+            <div class="flex">Item 2</div>
+            <div class="flex">Item 3</div>
+            <div class="flex">Item 4</div>
+        </div>
+
+        <div class="flex-startcontainer">
+            <div class="start">Item 1</div>
+            <div class="start">Item 2</div>
+            <div class="start">Item 3</div>
+            <div class="start">Item 4</div>
+        </div>
     </body>
 </html>
