--- a/flexBoxUsage.html
+++ b/flexBoxUsage.html
@@ -21,11 +21,27 @@
             <div class="flex">Item 4</div>
         </div>
 
-        <div class="flex-startcontainer">
+        <div class="flex-start-container">
             <div class="start">Item 1</div>
             <div class="start">Item 2</div>
             <div class="start">Item 3</div>
             <div class="start">Item 4</div>
+        </div>
+
+        <div class="container no-wrap-container">
+            <div class="item">Item 1</div>
+            <div class="item">Item 2</div>
+            <div class="item">Item 3</div>
+            <div class="item">Item 4</div>
+            <div class="item">Item 4</div>
+            <div class="item">Item 4</div>
+        </div>
+
+        <div class="container wrap-container">
+            <div class="item">Item 1</div>
+            <div class="item">Item 2</div>
+            <div class="item">Item 3</div>
+            <div class="item">Item 4</div>
         </div>
     </body>
 </html>
