Form tag edited further

--- a/AllBasicHtmlTags.html
+++ b/AllBasicHtmlTags.html
@@ -190,10 +190,35 @@
             <label for="checkbox2">Check 2</label><br />
 
             <label for="dropdown">Dropdown:</label>
-            <select id="dropdown" name="dropdown">
+            <select id="dropdown" name="dropdown" multiple>
                 <option value="option1">Option 1</option>
                 <option value="option2">Option 2</option>
-                <option value="option3">Option 3</option></select
+                <option value="option3">Option 3</option>
+                <option value="option4">Option 4</option>
+                <option value="option5">Option 5</option>
+                <!-- Add more options as needed --></select
+            ><br />
+
+            <label for="scrollable-dropdown">Scrollable Dropdown:</label>
+            <select
+                id="scrollable-dropdown"
+                name="scrollable-dropdown"
+                size="5"
+            >
+                <option value="optionA">Option A</option>
+                <option value="optionB">Option B</option>
+                <option value="optionC">Option C</option>
+                <option value="optionD">Option D</option>
+                <option value="optionE">Option E</option>
+                <!-- Add more options as needed --></select
+            ><br />
+
+            <label for="another-dropdown">Another Dropdown:</label>
+            <select id="another-dropdown" name="another-dropdown">
+                <option value="item1">Item 1</option>
+                <option value="item2">Item 2</option>
+                <option value="item3">Item 3</option>
+                <!-- Add more options as needed --></select
             ><br />
 
             <input type="submit" value="Submit" />
