beautification of form's code NOT the Look

--- a/AllBasicHtmlTags.html
+++ b/AllBasicHtmlTags.html
@@ -196,8 +196,8 @@
                 <option value="option3">Option 3</option>
                 <option value="option4">Option 4</option>
                 <option value="option5">Option 5</option>
-                <!-- Add more options as needed --></select
-            ><br />
+            </select>
+            <br />
 
             <label for="scrollable-dropdown">Scrollable Dropdown:</label>
             <select
@@ -210,16 +210,18 @@
                 <option value="optionC">Option C</option>
                 <option value="optionD">Option D</option>
                 <option value="optionE">Option E</option>
-                <!-- Add more options as needed --></select
-            ><br />
+                <!-- Add more options as needed -->
+            </select>
+            <br />
 
             <label for="another-dropdown">Another Dropdown:</label>
             <select id="another-dropdown" name="another-dropdown">
                 <option value="item1">Item 1</option>
                 <option value="item2">Item 2</option>
                 <option value="item3">Item 3</option>
-                <!-- Add more options as needed --></select
-            ><br />
+                <!-- Add more options as needed -->
+            </select>
+            <br />
 
             <input type="submit" value="Submit" />
         </form>
