--- a/lab/imagesearchingWebpage.html
+++ b/lab/imagesearchingWebpage.html
@@ -59,93 +59,93 @@
             const imageData = [
                 {
                     //Sunset
-                    id: 1,
+                    id: "Sunset",
                     src: "https://img.freepik.com/free-photo/water-blue-sunset-filter-beauty_1203-4457.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=sph",
                 },
                 {
-                    id: 2,
+                    id: "Sunset",
                     src: "https://img.freepik.com/free-photo/red-sunset-clouds-trees_1204-352.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=sph",
                 },
                 {
-                    id: 3,
+                    id: "Sunset",
                     src: "https://img.freepik.com/free-photo/3d-render-tree-against-sunset-sky_1048-4191.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=sph",
                 }, //Sunset End
                 {
                     //birds
-                    id: 4,
+                    id: "birds",
                     src: "https://img.freepik.com/free-photo/view-flock-birds-flying-into-beautiful-sky-during-sunset_181624-35074.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=sph",
                 },
                 {
-                    id: 5,
+                    id: "birds",
                     src: "https://img.freepik.com/free-photo/colorful-bird-sits-branch-forest_188544-8871.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=sph",
                 },
                 {
-                    id: 6,
+                    id: "birds",
                     src: "https://img.freepik.com/free-photo/selective-focus-shot-hummingbird-flight_181624-56855.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=sph",
                 }, //birds end
                 {
                     //flowers
-                    id: 7,
+                    id: "flowers",
                     src: "https://img.freepik.com/free-photo/close-up-flowering-plant-with-blurred-background_1156-24.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais",
                 },
                 {
-                    id: 8,
+                    id: "flowers",
                     src: "https://img.freepik.com/free-photo/close-up-vibrant-yellow-flowers-summer-field_181624-37969.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais",
                 },
                 {
-                    id: 9,
+                    id: "flowers",
                     src: "https://img.freepik.com/free-photo/closeup-view-purple-flower-with-bee-it-meadow_181624-6390.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais",
                 }, //flowers end
                 {
                     //corals
-                    id: 10,
+                    id: Corals,
                     src: "https://img.freepik.com/free-photo/bleached-coral-showing-environmental-crisis-eco-system-failure_23-2151038117.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais",
                 },
                 {
-                    id: 11,
+                    id: Corals,
                     src: "https://img.freepik.com/free-photo/corals-sponges-around-thriving-tropical-coral-reef_1360-117.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais",
                 },
                 {
-                    id: 12,
+                    id: Corals,
                     src: "https://img.freepik.com/free-photo/coral-reef_658691-326.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais",
                 }, //corals end
                 {
                     //jellyfish
-                    id: 13,
+                    id: "Jellyfish",
                     src: "https://img.freepik.com/free-photo/jellyfish-water-tank_1150-12620.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais",
                 },
                 {
-                    id: 14,
+                    id: "Jellyfish",
                     src: "https://img.freepik.com/free-photo/closeup-shot-south-american-nettle-swimming-deep-water_181624-10853.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais",
                 },
                 {
-                    id: 15,
+                    id: "Jellyfish",
                     src: "https://img.freepik.com/free-photo/vertical-shot-south-american-nettle-swimming-deep-water_181624-13516.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais",
                 }, //jellyfish end
                 {
                     //night sky
-                    id: 16,
+                    id: "Night Sky",
                     src: "https://img.freepik.com/free-photo/silhouette-photography-trees-blue-sky-during-golden-hour_395237-143.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais",
                 },
                 {
-                    id: 17,
+                    id: "Night Sky",
                     src: "https://img.freepik.com/free-photo/beautiful-cloudscape-sunset-evening-dawn_53876-14284.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais",
                 },
                 {
-                    id: 18,
+                    id: "Night Sky",
                     src: "https://img.freepik.com/free-photo/silhouettes-hills-street-lamps-cloudy-sky-during-beautiful-sunset_181624-28611.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais",
                 }, //night sky end
                 {
                     //moon
-                    id: 19,
+                    id: "moon",
                     src: "https://img.freepik.com/free-photo/purple-landscape_1048-4769.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais",
                 },
                 {
-                    id: 20,
+                    id: "moon",
                     src: "https://img.freepik.com/free-photo/3d-landscape-with-tree-against-moonlit-sky_1048-12527.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais",
                 },
                 {
-                    id: 21,
+                    id: "moon",
                     src: "https://img.freepik.com/free-photo/beautiful-moon-dark-sky_198169-261.jpg?size=626&ext=jpg&ga=GA1.1.842036517.1695668928&semt=ais",
                 }, //moon end
 
